# aoc2015

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: main.rs
